# mariadb-connector-cpp

./: CMakeLists.txt
cmake/: connector_c.cmake
include/: CMakeLists.txt
